@@ -1,3 +1,7 @@
+= master
+
+* Add support for :unsupported_block_result => :raise option, for raising on unsupported route/match block return values (jeremyevans)
+
 = 2.21.0 (2016-12-16)
 
 * Add handle_stream_error method to streaming plugin, for handling errors when using stream(:loop=>true) (jeremyevans)
